Fixed layout issues

--- a/css/components.css
+++ b/css/components.css
@@ -1,5 +1,5 @@
 .darken-layer {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
